<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:layout_marginHorizontal="@dimen/margin_large">

    <TextView
        android:id="@+id/txtGpsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_gps_header"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txtGpsSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/margin_large"
        android:paddingLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_gps_subheader"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGpsHeader" />
    <ImageView
        android:id="@+id/ic_gpslocation"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:maxWidth="30dp"
        android:maxHeight="30dp"
        android:src="@drawable/ic_bet_shop_location"
        app:layout_constraintStart_toStartOf="@id/txtGpsSubHeader"
        app:layout_constraintTop_toBottomOf="@id/txtGpsSubHeader"
        app:tint="@color/green" />

    <TextView
        android:id="@+id/txtGpsUsageInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/text_gps_usage"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/ic_gpslocation"
        android:paddingHorizontal="@dimen/margin_xlarge"
        app:layout_constraintWidth="true"
        app:layout_constraintEnd_toEndOf="@id/txtGpsSubHeader"
        app:layout_constraintTop_toTopOf="@id/ic_gpslocation"
        />

    <TextView
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_yes"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGpsUsageInformation"
        android:paddingBottom="@dimen/margin_large"/>
    <TextView
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_xlarge"
        app:layout_constraintEnd_toStartOf="@id/btnYes"
        app:layout_constraintTop_toBottomOf="@id/txtGpsUsageInformation"
        android:paddingBottom="@dimen/margin_large"/>



</androidx.constraintlayout.widget.ConstraintLayout>