<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">


    <ImageView
        android:id="@+id/ic_location"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_normal"
        android:maxWidth="30dp"
        android:maxHeight="30dp"
        android:src="@drawable/ic_bet_shop_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:text="@string/text_address_placeholder"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ic_location"
        app:layout_constraintTop_toTopOf="@id/ic_location" />

    <ImageView
        android:id="@+id/ic_phone"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="@dimen/margin_small"
        android:maxWidth="30dp"
        android:maxHeight="30dp"
        android:src="@drawable/ic_bet_shop_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtPhone" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:text="@string/text_phone_placeholder"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ic_phone"
        app:layout_constraintTop_toBottomOf="@id/txtAddress"/>

    <ImageView
        android:id="@+id/ic_time"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="@dimen/margin_small"
        android:maxWidth="30dp"
        android:maxHeight="30dp"
        android:src="@drawable/ic_bet_shop_hours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtOpenHours" />

    <TextView
        android:id="@+id/txtOpenHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:text="@string/text_open_now"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ic_time"
        app:layout_constraintTop_toBottomOf="@id/txtPhone"/>

    <TextView
        android:id="@+id/txtRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:text="@string/text_route_btn"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ic_time"
        app:layout_constraintTop_toBottomOf="@id/txtOpenHours"
        android:layout_marginBottom="@dimen/margin_large"/>


</androidx.constraintlayout.widget.ConstraintLayout>